# interior-pro

./: .env.example  .gitignore  CLAUDE.md  README.md  build.sh  door_boolean.rb  door_casing_profiles.rb  door_delete_tool.rb  door_edit_tool.rb  door_library.rb  door_library_dialog.rb  door_manager.rb  door_move_tool.rb  door_observer.rb  door_tool.rb  door_wall_observer.rb  interior_pro.rbz  main.rb  pyproject.toml  recover.rb  render.yaml  requirements.txt  toolbar.rb  ui_dialogs.rb  wall_edit_tool.rb  wall_library.rb  wall_library_dialog.rb  wall_merge_tool.rb  wall_move_tool.rb  wall_tool.rb  window_library.rb  window_library_dialog.rb  window_tool.rb
.claude/: settings.json
app/: config.py  main.py
app/api/: routes.py  schemas.py
app/dwg/: converter.py  elements.py  layer_mapping.py  parser.py  pdf_scanner.py
app/geometry/: furniture.py  openings.py  utils.py  walls.py
app/preview/: svg_renderer.py
app/sketchup/: furniture.py  generator.py  materials.py  openings.py  walls.py
app/sketchup/templates/: footer.rb.j2  furniture.rb.j2  header.rb.j2  opening.rb.j2  wall.rb.j2
app/storage/: file_manager.py
component_library/: mapping.json
sketchup_extension/: interior_pro.rb
sketchup_extension/interior_pro/: main.rb  toolbar.rb  ui_dialogs.rb  wall_edit_tool.rb  wall_library_dialog.rb  wall_tool.rb  window_library.rb  window_library_dialog.rb  window_tool.rb
solid_boolean/: LICENSE  load.rb  solid_operations.rb
static/: index.html
static/css/: style.css
static/js/: app.js  preview.js
